src/config/loader/snapshots/unknown__config__loader__tests__dependency_from_out_of_workspace.snap
---
source: src/config/loader/tests.rs
expression: "render_miette(err, &test_files)"
---

  × Encountered some errors when validating config files

Error: 
  × The provided path was not in the workspace: /
   ╭─[project/project.kdl:2:1]
 2 │ dependencies {
 3 │     project "../../"
   ·             ────┬───
   ·                 ╰── the path is referenced here
 4 │ }
   ╰────

